--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SebastianSlangerup/Bulma.git"
+    "url": "git+https://github.com/SebastianSlangerup/sebastianslangerup.github.io.git"
   },
   "author": "Sebastian Slangerup",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/SebastianSlangerup/Bulma/issues"
+    "url": "https://github.com/SebastianSlangerup/sebastianslangerup.github.io/issues"
   },
-  "homepage": "https://github.com/SebastianSlangerup/Bulma#readme",
+  "homepage": "https://github.com/SebastianSlangerup/sebastianslangerup.github.io#readme",
   "dependencies": {
     "bulma": "^0.9.1",
     "jquery": "^3.5.1"
